--- a/Vehicle_Detection.ipynb
+++ b/Vehicle_Detection.ipynb
@@ -120,7 +120,41 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "vehicles = glob.glob('data/vehicles/*/*.png')\n",
+    "non_vehicles = glob.glob('data/non-vehicles/*/*.png')\n",
+    "\n",
+    "car_features = []\n",
+    "non_car_features = []\n",
+    "for car in vehicles:\n",
+    "    img = cv2.imread(car)\n",
+    "    car_features.append(calculateFeatures(img))\n",
+    "for nocar in non_vehicles:\n",
+    "    img = cv2.imread(nocar)\n",
+    "    non_car_features.append(calculateFeatures(img))\n",
+    "\n",
+    "# Create an array stack of feature vectors\n",
+    "X = np.vstack((car_features, non_car_features)).astype(np.float64)\n",
+    "\n",
+    "# Define the labels vector\n",
+    "y = np.hstack((np.ones(len(car_features)), np.zeros(len(non_car_features))))\n",
+    "\n",
+    "# Split up data into randomized training and test sets\n",
+    "rand_state = np.random.randint(0, 100)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=rand_state)\n",
+    "    \n",
+    "# Fit a per-column scaler\n",
+    "X_scaler = StandardScaler().fit(X_train)\n",
+    "# Apply the scaler to X\n",
+    "X_train = X_scaler.transform(X_train)\n",
+    "X_test = X_scaler.transform(X_test)\n",
+    "\n",
+    "clf = svm.SVC()\n",
+    "clf.fit(X_train, y_train)\n",
+    "\n",
+    "score = clf.score(X_test, y_test)\n",
+    "print(score)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -270,33 +304,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vehicles = glob.glob('data/vehicles/*/*.png')\n",
-    "non_vehicles = glob.glob('data/non-vehicles/*/*.png')\n",
     "\n",
-    "car_features = []\n",
-    "non_car_features = []\n",
-    "for car in vehicles:\n",
-    "    img = cv2.imread(car)\n",
-    "    car_features.append(calculateFeatures(img))\n",
-    "for nocar in non_vehicles:\n",
-    "    img = cv2.imread(nocar)\n",
-    "    non_car_features.append(calculateFeatures(img))\n",
-    "\n",
-    "# Create an array stack of feature vectors\n",
-    "X = np.vstack((car_features, non_car_features)).astype(np.float64)\n",
-    "\n",
-    "# Define the labels vector\n",
-    "y = np.hstack((np.ones(len(car_features)), np.zeros(len(non_car_features))))\n",
-    "\n",
-    "# Split up data into randomized training and test sets\n",
-    "rand_state = np.random.randint(0, 100)\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=rand_state)\n",
-    "    \n",
-    "# Fit a per-column scaler\n",
-    "X_scaler = StandardScaler().fit(X_train)\n",
-    "# Apply the scaler to X\n",
-    "X_train = X_scaler.transform(X_train)\n",
-    "X_test = X_scaler.transform(X_test)\n",
     "\n",
     "\n",
     "\n",
