--- a/writeup.ipynb
+++ b/writeup.ipynb
@@ -20,14 +20,11 @@
     "* Estimate a bounding box for vehicles detected.\n",
     "\n",
     "[//]: # (Image References)\n",
-    "[image1]: ./examples/car_not_car.png\n",
-    "[image2]: ./examples/HOG_example.jpg\n",
-    "[image3]: ./examples/sliding_windows.jpg\n",
-    "[image4]: ./examples/sliding_window.jpg\n",
-    "[image5]: ./examples/bboxes_and_heat.png\n",
-    "[image6]: ./examples/labels_map.png\n",
-    "[image7]: ./examples/output_bboxes.png\n",
-    "[video1]: ./project_video.mp4\n",
+    "[image1]: ./output_images/car_not_car.png\n",
+    "[image2]: ./output_images/HOG_example.png\n",
+    "[image3]: ./output_images/sliding_windows.png\n",
+    "[image4]: ./output_images/sliding_window_result.png\n",
+    "[image5]: ./output_images/bboxes_and_heat.png\n",
     "\n",
     "## [Rubric](https://review.udacity.com/#!/rubrics/513/view) Points\n",
     "### Here I will consider the rubric points individually and describe how I addressed each point in my implementation.  \n",
@@ -58,23 +55,24 @@
     "\n",
     "#### 2. Explain how you settled on your final choice of HOG parameters.\n",
     "\n",
-    "I tried various combinations of parameters and...\n",
+    "I tried various combinations of parameters and after training and scoring some classifiers I chose the standard 8x8 pixels per cell and 2x2 cells per block with 9 orientations and L2 Hysteresis Block normalisations.\n",
     "\n",
     "#### 3. Describe how (and identify where in your code) you trained a classifier using your selected HOG features (and color features if you used them).\n",
     "\n",
-    "I trained a SVM using...\n",
+    "I trained a SVM using a feature combination containing spatial RGB values, Color Histogramms from H, Cr and Cb channels and hog features from Y and S channels. (Lines 29 to 51 in second code cell in [Vehicle_Detection.ipynb](./Vehicle_Detection.ipynb))\n",
+    "The classifier training is in the 3rd Code cell in the IPython Notebook\n",
     "\n",
     "### Sliding Window Search\n",
     "\n",
     "#### 1. Describe how (and identify where in your code) you implemented a sliding window search.  How did you decide what scales to search and how much to overlap windows?\n",
     "\n",
-    "I decided to search random window positions at random scales all over the image and came up with this (ok just kidding I didn't actually ;):\n",
+    "I decided to search window positions at 3 scales in the bottom half of the image and came up with this:\n",
     "\n",
     "![alt text][image3]\n",
     "\n",
     "#### 2. Show some examples of test images to demonstrate how your pipeline is working.  What did you do to optimize the performance of your classifier?\n",
     "\n",
-    "Ultimately I searched on two scales using YCrCb 3-channel HOG features plus spatially binned color and histograms of color in the feature vector, which provided a nice result.  Here are some example images:\n",
+    "Ultimately I searched on three scales using a feature combination containing spatial RGB values, Color Histogramms from H, Cr and Cb channels and hog features from Y and S channels, which provided a nice result.  Here are some example images:\n",
     "\n",
     "![alt text][image4]\n",
     "---\n",
@@ -82,7 +80,7 @@
     "### Video Implementation\n",
     "\n",
     "#### 1. Provide a link to your final video output.  Your pipeline should perform reasonably well on the entire project video (somewhat wobbly or unstable bounding boxes are ok as long as you are identifying the vehicles most of the time with minimal false positives.)\n",
-    "Here's a [link to my video result](./project_video.mp4)\n",
+    "Here's a [link to my video result](./output_images/project_video.mp4) and here's a [combination with lane detection](./output_images/project_video_lanes.mp4) from the last project.\n",
     "\n",
     "\n",
     "#### 2. Describe how (and identify where in your code) you implemented some kind of filter for false positives and some method for combining overlapping bounding boxes.\n",
@@ -91,15 +89,10 @@
     "\n",
     "Here's an example result showing the heatmap from a series of frames of video, the result of `scipy.ndimage.measurements.label()` and the bounding boxes then overlaid on the last frame of video:\n",
     "\n",
-    "### Here are six frames and their corresponding heatmaps:\n",
+    "### Here are three examples and their corresponding heatmaps, the output of `scipy.ndimage.measurements.label()` and the resulting bounding boxes:\n",
     "\n",
     "![alt text][image5]\n",
     "\n",
-    "### Here is the output of `scipy.ndimage.measurements.label()` on the integrated heatmap from all six frames:\n",
-    "![alt text][image6]\n",
-    "\n",
-    "### Here the resulting bounding boxes are drawn onto the last frame in the series:\n",
-    "![alt text][image7]\n",
     "\n",
     "\n",
     "\n",
@@ -109,7 +102,15 @@
     "\n",
     "#### 1. Briefly discuss any problems / issues you faced in your implementation of this project.  Where will your pipeline likely fail?  What could you do to make it more robust?\n",
     "\n",
-    "Here I'll talk about the approach I took, what techniques I used, what worked and why, where the pipeline might fail and how I might improve it if I were going to pursue this project further.  \n",
+    "I took the suggested approach from the lesson using hog and color features, training a support vector machine and use sliding windows for object detection.\n",
+    "\n",
+    "One main difficulty was to select the best color channels for hog and histogram features, so that the detection is reliable but not too slow because of the many features that have to be calculated.\n",
+    "\n",
+    "I tried to use PCA to reduce the number of features, but that made the detection step even slower.\n",
+    "\n",
+    "An other difficulty was to choose how many sliding windows will be used, because more windows make the pipeline more robust, but also a lot slower.\n",
+    "\n",
+    "Using this approach it is not possible to seperate two cars that are very close two each other. They will result in one big bounding box.\n",
     "\n"
    ]
   },
